--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -75,7 +75,7 @@ body.dark .button {
 }
 
 body.dark .button:hover {
-    background: linear-gradient(to right, #3a2b84, #6c59b3); 
+    background: linear-gradient(to right, #c9a0f2, #7b59c6); 
 }
 
 body.light .h3-proyects {
