--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -9,9 +9,8 @@
     margin: 0 15px;
   }
 
-/* Estilo para el navbar en el tema claro */
 body.light .navbar {
-    background: linear-gradient(to right, #f7f6fa, #E4DEF8); /* Fondo similar al del home */
+    background: linear-gradient(to right, #f7f6fa, #E4DEF8);
     color: #333;
 }
 
@@ -19,7 +18,6 @@ body.light .navbar-nav .nav-link {
     color: #26105e;
     position: relative;
     padding: 5px 10px;
-    /* Eliminamos el borde inferior */
     transition: color 0.3s ease;
 }
 
@@ -38,17 +36,16 @@ body.light .navbar-nav .nav-link::after {
 }
 
 body.light .navbar-nav .nav-link:hover {
-    color: #8367d4; /* Cambiar el color al pasar el mouse */
+    color: #8367d4;
 }
 
 body.light .navbar-nav .nav-link:hover::after {
     transform: scaleX(1);
-    transform-origin: bottom left; /* Efecto de subrayado que entra de izquierda a derecha */
+    transform-origin: bottom left;
 }
 
-/* Estilo para el navbar en el tema oscuro */
 body.dark .navbar {
-    background: linear-gradient(to right, #29003D, #15001F); /* Fondo similar al del home */
+    background: linear-gradient(to right, #29003D, #15001F);
     color: #f7f6fa;
 }
 
@@ -56,7 +53,6 @@ body.dark .navbar-nav .nav-link {
     color: #e0e0ff;
     position: relative;
     padding: 5px 10px;
-    /* Eliminamos el borde inferior */
     transition: color 0.3s ease;
 }
 
@@ -75,10 +71,10 @@ body.dark .navbar-nav .nav-link::after {
 }
 
 body.dark .navbar-nav .nav-link:hover {
-    color: #c1b4ff; /* Cambiar el color al pasar el mouse */
+    color: #c1b4ff;
 }
 
 body.dark .navbar-nav .nav-link:hover::after {
     transform: scaleX(1);
-    transform-origin: bottom left; /* Efecto de subrayado que entra de izquierda a derecha */
+    transform-origin: bottom left;
 }
