--- a/src/front/styles/individualproyect.css
+++ b/src/front/styles/individualproyect.css
@@ -23,10 +23,11 @@
   }
   
   .projects-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* Siempre 4 columnas */
+    gap: 20px; /* Espaciado entre los elementos */
+    justify-content: center; /* Centra los elementos horizontalmente */
+    align-items: start; /* Alinea los elementos verticalmente */
     padding: 5px;
     height: 100%;
   }
@@ -174,17 +175,22 @@
   .play-button:hover, .code-button:hover {
     background: linear-gradient(to right, #c9a0f2, #7b59c6);
   }
+
+  @media (max-width: 1250px) {
+    .projects-grid {
+        grid-template-columns: repeat(2, 1fr); /* Cambia a 2 columnas en pantallas medianas */
+    }
+  }
   
   @media (max-width: 768px) {
     .projects-grid {
-      flex-direction: column;
-      align-items: center;
+      grid-template-columns: 1fr; /* Cambia a 1 columna en pantallas pequeñas */
     }
   
     .project {
       flex: none;
       max-width: 100%;
-      height: 33rem !important;
+      height: auto; /* Ajusta la altura automáticamente */
     }
   
     .project:hover {
